# finance-analysis

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  FEATURES.md  README.md  alembic.ini  app.py  conftest.py  demo_app.py  fad.bat  index.py  main.py  package.json  plan.md  pyproject.toml  requirements.txt  requirments.txt  run.sh  setup.py  start-remote.sh  start.sh  vercel.json  wrangler.jsonc
.agent/rules/: backend_repositories.md  backend_resources.md  backend_scraper.md  backend_services.md  backend_utils.md  frontend_components.md  frontend_pages.md  frontend_utils.md  general.md  testing.md
.agent/workflows/: close-worktree.md  create-task-worktree.md  error-handling.md  finalize-feature.md  setup-environment.md  testing-backend-routes.md  update-rules.md
.claude/: launch.json  settings.json
.claude/rules/: api_paths.md  backend_repositories.md  backend_resources.md  backend_scraper.md  backend_services.md  ci_and_release.md  frontend_components.md  frontend_i18n.md  frontend_i18n_checklist.md  frontend_pages.md  frontend_pitfalls.md  frontend_pwa.md  frontend_responsive.md  frontend_utils.md  general.md  installation_and_updates.md  kpi_calculations.md  split_transactions.md  testing.md
.claude/scripts/: bootstrap_venv.sh  check_i18n_keys.py  e2e_parallel_isolated.py  generate_pwa_icons.py  run_empty_db_e2e.sh  scaffold_feature.py  with_server.py
.cursor/rules/: docstrings.mdc
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/instructions/: fad-app-components.instructions.md  fad-app-data-access.instructions.md  fad-app-pages.instructions.md  fad-app-services.instructions.md  fad-app-utils.instructions.md  fad-resources.instructions.md  fad-scraper.instructions.md
.github/workflows/: auto-version.yml  build-installer.yml  build-smoke.yml  bump-version.yml  ci.yml  deploy.yml  develop-ci.yml  docker-build-and-push.yml  pr-preview.yml  release.yml
api/: index.py  requirements.txt
app/: overview.py
app/pages/: expenses_raw_data.py  settings.py  tags.py
backend/: __init__.py  config.py  database.py  demo_setup.py  dependencies.py  errors.py  main.py  naming_conventions.py
backend/alembic/: env.py
backend/constants/: __init__.py  budget.py  categories.py  loans.py  providers.py  tables.py
backend/demo/: demo_categories.yaml  demo_categories_icons.yaml  seed_demo_data.py
backend/models/: __init__.py  bank_balance.py  base.py  budget.py  budget_month_override.py  cash_balance.py  category.py  credential.py  imported_account.py  insurance_account.py  interest_rate.py  investment.py  investment_balance_snapshot.py  liability.py  pending_refund.py  retirement_goal.py  savings_goal.py  scraping.py  tagging.py  tagging_rules.py  transaction.py
backend/repositories/: __init__.py  bank_balance_repository.py  budget_month_override_repository.py  budget_repository.py  cash_balance_repository.py  credentials_repository.py  imported_accounts_repository.py  insurance_account_repository.py  interest_rates_repository.py  investment_snapshots_repository.py  investments_repository.py  liabilities_repository.py  pending_refunds_repository.py  retirement_goal_repository.py  savings_goal_repository.py  scraping_history_repository.py  scraping_repository.py  split_transactions_repository.py  tagging_repository.py  tagging_rules_repository.py  transactions_repository.py
backend/resources/: boi_rates.yaml  categories_icons.yaml  default_categories.yaml  demo_data.db  empty_data.db
backend/routes/: __init__.py  analytics.py  backup.py  bank_balances.py  budget.py  budget_month_overrides.py  cash_balances.py  credentials.py  google.py  imported_accounts.py  insurance_accounts.py  investments.py  liabilities.py  onboarding.py  pending_refunds.py  rates.py  retirement.py  savings_goals.py  schemas.py  scraping.py  tagging.py  tagging_rules.py  testing.py  transactions.py  uninstall.py  updates.py  version.py
backend/scraper/: __init__.py  adapter.py  exceptions.py  scrapers.py
backend/services/: __init__.py  analysis_service.py  bank_balance_service.py  budget_month_override_service.py  budget_service.py  cash_balance_service.py  credentials_service.py  file_import_parser.py  google_drive_service.py  imported_accounts_service.py  insights_service.py  insurance_account_service.py  investments_service.py  liabilities_service.py  onboarding_service.py  pending_refunds_service.py  rates_service.py  (+9 more)
design/: redesign-sketch.artifact.html  redesign-sketch.html
docs/: DATA-FLOW.md  bug-optimization-plan.md  data-flow.html  data-flow.md  improvement-plan.md  next-features.md  postmortem.md
fad/: __init__.py  naming_conventions.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
scraper/: __init__.py  __main__.py  exceptions.py  scrapers.py  upstream_sync.json
scripts/: fix_scraper_dates.py  generate_demo_data.py  generate_empty_data.py  migrate_desc_to_description.py  migrate_tagging_rules_cleanup.py  migrate_title_case.py  run_schemathesis.sh
src/: __init__.py  categories.yaml
tests/: conftest.py  test_app.py  test_auto_tagging_scrape.py  test_backend_repos.py  test_scrapers.py
(+739 files in other folders)
