[project]
name = "finance-analysis"
authors = [{ name = "Author Name", email = "tomerroditi1@gmail.com" }]
readme = "README.md"
license = "MIT"

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.pytest.ini_options]
markers = [
    "sensitive: marks tests that pulls sensitive data from the internet",
]

[tool.poetry]
name = "finance-analysis"
version = "0.0.0"
description = ""
authors = ["Author Name: <tomerroditi1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "==2.2.3"
numpy = "==1.26.4"
pyarrow = "==15.0.2"
plotly = "==5.24.1"
PyYAML = "==6.0.1"
SQLAlchemy = "==2.0.29"
streamlit = "==1.42.2"
streamlit-antd-components = "==0.3.2"
streamlit_phone_number = "==0.0.9"
streamlit-tags = "==1.2.8"

[tool.poetry.group.dev.dependencies]
pytest = "==8.3.5"
Faker = "==24.3.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "poetry"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

