[tool.poetry]
name = "finance-analysis"
version = "1.21.1"
description = ""
authors = ["Author Name <tomerroditi1@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "==2.2.3"
numpy = "==1.26.4"
pyarrow = "==15.0.2"
plotly = "==5.24.1"
PyYAML = "==6.0.1"
SQLAlchemy = "==2.0.29"
keyring = ">=24.0.0"
# Backend API dependencies
fastapi = ">=0.109.0"
uvicorn = { version = ">=0.27.0", extras = ["standard"] }
python-dotenv = "^1.0.0"
alembic = "^1.14.0"
# Scraper dependencies
playwright = "^1.57.0"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "==8.3.5"
Faker = "==24.3.0"
commitizen = "^4.4.1"
playwright = "^1.57.0"
requests = "^2.32.5"
ruff = "^0.9.0"
pytest-cov = "^7.0.0"
# Schemathesis fuzzes the FastAPI OpenAPI schema at /openapi.json — runs in
# a dedicated CI job (see ci.yml), not via pytest, so it is not added to the
# `pythonpath` test discovery.
schemathesis = "^3.36.0"
# Provides a PlaintextKeyring fallback so the demo-mode toggle works in
# CI / sandbox environments without an OS keyring backend (Secret Service,
# Mac Keychain, Windows Credential Manager). Required for the empty-DB
# e2e gate; see frontend/e2e/onboarding-flows.spec.ts demo path.
"keyrings.alt" = "^5.0.2"

# Build-only deps for producing the self-contained desktop bundle.
# Kept out of the regular `poetry install` so dev installs stay slim;
# the release workflow installs this group with `--with build`.
# `playwright` itself is already in the main deps (it's a runtime dep
# of the scraper); only `pyinstaller` is unique to building.
[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.10.0"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["sensitive: marks tests that pulls sensitive data from the internet"]
addopts = "--cov=backend --cov-report=term-missing"

[tool.coverage.run]
source = ["backend"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "backend/scraper/*",
]

[tool.coverage.report]
fail_under = 40
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "poetry"
version_files = [
    "pyproject.toml:tool.poetry.version",
    "frontend/package.json:\"version\"",
    "build/installer_script.nsi:^!define APP_VERSION \".*\"$",
]
update_changelog_on_bump = true
bump_message = "bump: version $current_version → $new_version [skip ci]"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
